Fix vertical alignment of `.doc-logo` in IE

--- a/docs-assets/scss/docs.scss
+++ b/docs-assets/scss/docs.scss
@@ -177,15 +177,15 @@
   display: inline-flex;
   font-family: $font-family-serif;
   font-weight: 700;
+  height: 1.8em;
   justify-content: center;
   line-height: 1;
   margin-bottom: 0;
-  min-height: 1.8em;
-  min-width: 1.8em;
   overflow: hidden;
   position: relative;
   user-select: none;
   white-space: nowrap;
+  width: 1.8em;
   z-index: 1;
 
   @include active-focus-hover {
